--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                                                 </li>
                                                 <li class="col-sm-4">
                                                    <ul class="menu-inner">
-                                                      <li class="dropdown-header">Next Matchs</li>
+                                                      <li class="dropdown-header">Next Matches</li>
                                                       <li><a href="#">Contrary vs classical</a></li>
                                                       <li><a href="#">Discovered vs undoubtable</a></li>
                                                       <li><a href="#">Contrary vs classical</a></li>
@@ -197,7 +197,7 @@
                            <div class="container">
                               <div class="col-md-3 column">
                                  <div class="card">
-                                    <img class="img-responsive" src="images/bobby.jpg" alt="John" style="width:100%">
+                                    <img class="img-responsive" src="images/bobby.jpg" alt="image of abhinav" style="width:100%">
                                     <div class="">
                                        <h4>Abhinav Aditya Singh</h4>
                                        <p class="title">189303109</p>
@@ -209,7 +209,7 @@
                               </div>
                               <div class="col-md-3 column">
                                  <div class="card">
-                                    <img class="img-responsive" src="images/jay.jpg" alt="Mike" style="width:100%">
+                                    <img class="img-responsive" src="images/jay.jpg" alt="image of jay" style="width:100%">
                                     <div class="">
                                        <h4>Jayvardhan Singh</h4>
                                        <p class="title">189303063</p>
@@ -221,7 +221,7 @@
                               </div>
                               <div class="col-md-3 column">
                                  <div class="card">
-                                    <img class="img-responsive" src="images/das.jpg" alt="John" style="width:100%">
+                                    <img class="img-responsive" src="images/das.jpg" alt="image of ayush" style="width:100%">
                                     <div class="">
                                        <h4>Ayush Das</h4>
                                        <p class="title">189303007</p>
