--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                                        <ul class="nav navbar-nav">
                                           <li class="active"><a href="index.html">Home</a></li>
                                           <li><a href="about.html">About</a></li>
-                                          <li><a href="team.html">Team</a></li>
                                           <li><a href="news.html">News</a></li>
                                           <li class="dropdown mega-dropdown">
                                              <a href="match" class="dropdown-toggle" data-toggle="dropdown">Match<span class="caret"></span></a>				
@@ -136,7 +135,7 @@
                                                 </li>
                                                 <li class="col-sm-4">
                                                    <ul class="menu-inner">
-                                                      <li class="dropdown-header">Next Matchs</li>
+                                                      <li class="dropdown-header">Next Matches</li>
                                                       <li><a href="#">Contrary vs classical</a></li>
                                                       <li><a href="#">Discovered vs undoubtable</a></li>
                                                       <li><a href="#">Contrary vs classical</a></li>
@@ -149,8 +148,6 @@
                                                 </li>
                                              </ul>
                                           </li>
-                                          <li><a href="blog.html">Blog</a></li>
-                                          <li><a href="contact.html">contact</a></li>
                                        </ul>
                                     </div>
                                     <!-- /.nav-collapse -->
@@ -189,7 +186,7 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Derserve</span><br>to win!</h3>
+                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Deserve</span><br>to win!</h3>
                               <p>If you use this site regularly and would like to help keep the site on the Internet,<br>
                                  please consider donating a small sum to help pay..
                               </p>
@@ -205,7 +202,7 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Derserve</span><br>to win!</h3>
+                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Deserve</span><br>to win!</h3>
                               <p>You can make a case for several potential winners of<br>the expanded European Championships.</p>
                               <button class="btn btn-primary btn-lg">Button</button>
                            </div>
@@ -219,7 +216,7 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Derserve</span><br>to win!</h3>
+                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Deserve</span><br>to win!</h3>
                               <p>You can make a case for several potential winners of<br>the expanded European Championships.</p>
                               <button class="btn btn-primary btn-lg">Button</button>
                            </div>
@@ -292,7 +289,7 @@
                         <li><span class="minutes">25 </span>Minutes </li>
                         <li><span class="seconds">10 </span>Seconds </li>
                      </ul>
-                     <span>12/02/2017 /19:00pm</span>
+                     <span>20/10/2020 /19:00pm</span>
                   </div>
                </div>
             </div>
@@ -388,55 +385,55 @@
                                  <td>1</td>
                                  <td><img src="images/img-01_004.png" alt="">Liverpool</td>
                                  <td>10</td>
-                                 <td>12</td>
-                                 <td>20</td>
+                                 <td>8</td>
+                                 <td>2</td>
                               </tr>
                               <tr>
                                  <td>2</td>
                                  <td><img src="images/img-02_002.png" alt="">Chelsea</td>
                                  <td>10</td>
-                                 <td>12</td>
-                                 <td>20</td>
+                                 <td>7</td>
+                                 <td>3</td>
                               </tr>
                               <tr>
                                  <td>3</td>
-                                 <td><img src="images/img-03_003.png" alt="">Norwich City</td>
-                                 <td>20</td>
-                                 <td>15</td>
-                                 <td>20</td>
+                                 <td><img src="images/img-03_003.png" alt="">Manchester City</td>
+                                 <td>11</td>
+                                 <td>7</td>
+                                 <td>4</td>
                               </tr>
                               <tr>
                                  <td>4</td>
-                                 <td><img src="images/img-04_002.png" alt="">West Brom</td>
-                                 <td>60</td>
+                                 <td><img src="images/img-04_002.png" alt="">Tottenham Hotspurs</td>
                                  <td>10</td>
-                                 <td>60</td>
+                                 <td>6</td>
+                                 <td>4</td>
                               </tr>
                               <tr>
                                  <td>5</td>
-                                 <td><img src="images/img-05.png" alt="">sunderland</td>
-                                 <td>30</td>
-                                 <td>06</td>
-                                 <td>30</td>
+                                 <td><img src="images/img-05.png" alt="">Manchester United</td>
+                                 <td>10</td>
+                                 <td>5</td>
+                                 <td>5</td>
                               </tr>
                               <tr>
-                                 <td>1</td>
-                                 <td><img src="images/img-01_004.png" alt="">Liverpool</td>
-                                 <td>10</td>
-                                 <td>12</td>
-                                 <td>20</td>
+                                 <td>6</td>
+                                 <td><img src="images/img-01_004.png" alt="">Arsenal</td>
+                                 <td>11</td>
+                                 <td>5</td>
+                                 <td>6</td>
                               </tr>
                            </tbody>
                         </table>
                      </div>
                   </aside>
                   <div class="content-widget top-story" style="background: url(images/top-story-bg.jpg);">
-                     <div class="top-stroy-header">
-                        <h2>Top Soccer Headlines Story <a href="#" class="fa fa-fa fa-angle-right"></a></h2>
-                        <span class="date">July 05, 2017</span>
+                     <div class="top-story-header">
+                        <h2>Top Football Headlines Story <a href="#" class="fa fa-fa fa-angle-right"></a></h2>
+                        <span class="date">July 05, 2020</span>
                         <h2>Other Headlines</h2>
                      </div>
-                     <ul class="other-stroies">
+                     <ul class="other-stories">
                         <li><a href="#">Wenger Vardy won't start</a></li>
                         <li><a href="#">Evans: Vardy just</a></li>
                         <li><a href="#">Pires and Murray </a></li>
@@ -453,7 +450,7 @@
                      <div class="news-post-widget">
                         <img class="img-responsive" src="images/img-01_002.jpg" alt="">
                         <div class="news-post-detail">
-                           <span class="date">20 march 2016</span>
+                           <span class="date">20 October 2020</span>
                            <h2><a href="blog-detail.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a></h2>
                            <p>Just hours after that his grandma had died, Angel Di Maria imagined how she might react if he didn't play</p>
                         </div>
@@ -461,7 +458,7 @@
                      <div class="news-post-widget">
                         <img class="img-responsive" src="images/img-02_003.jpg" alt="">
                         <div class="news-post-detail">
-                           <span class="date">20 march 2016</span>
+                           <span class="date">20 October 2020</span>
                            <h2><a href="blog-detail.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a></h2>
                            <p>Just hours after that his grandma had died, Angel Di Maria imagined how she might react if he didn't play</p>
                         </div>
@@ -471,7 +468,7 @@
                      <div class="news-post-widget">
                         <img class="img-responsive" src="images/img-03_003.jpg" alt="">
                         <div class="news-post-detail">
-                           <span class="date">20 march 2016</span>
+                           <span class="date">20 October 2020</span>
                            <h2><a href="blog-detail.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a></h2>
                            <p>Just hours after that his grandma had died, Angel Di Maria imagined how she might react if he didn't play</p>
                         </div>
@@ -508,72 +505,6 @@
             </div>
          </div>
       </section>
-      <div class="team-holder theme-padding">
-         <div class="container">
-            <div class="main-heading-holder">
-               <div class="main-heading sytle-2">
-                  <h2>Meet Your Team</h2>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium<br>doloremque laudantium, totam rem aperiam</p>
-               </div>
-            </div>
-            <div id="team-slider">
-               <div class="container">
-                  <div class="col-md-3">
-                     <div class="team-column style-2">
-                        <img src="images/img-1-1.jpg" alt="">
-                        <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
-                        </div>
-                        <div class="overlay">
-                           <div class="team-detail-hover position-center-x">
-                              <p>Lacus vulputate torquent mollis venenatis quisque suspendisse fermentum primis,</p>
-                              <ul class="social-icons style-4 style-5">
-                                 <li><a class="facebook" href="#" tabindex="0"><i class="fa fa-facebook"></i></a></li>
-                                 <li><a class="twitter" href="#" tabindex="0"><i class="fa fa-twitter"></i></a></li>
-                                 <li><a class="youtube" href="#" tabindex="0"><i class="fa fa-youtube-play"></i></a></li>
-                                 <li><a class="pinterest" href="#" tabindex="0"><i class="fa fa-pinterest-p"></i></a></li>
-                              </ul>
-                              <a class="btn blue-btn" href=" /soccer/team-detail.html" tabindex="0">View Detail</a>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-3">
-                     <div class="team-column style-2">
-                        <img src="images/img-1-2.jpg" alt="">
-                        <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-3">
-                     <div class="team-column style-2">
-                        <img src="images/img-1-3.jpg" alt="">
-                        <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-3">
-                     <div class="team-column style-2">
-                        <img src="images/img-1-4.jpg" alt="">
-                        <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
       <footer id="footer" class="footer">
          <div class="container">
             <div class="row">
@@ -629,7 +560,7 @@
          </div>
          <div class="footer-bottom">
             <div class="container">
-               <p>Copyright © 2018 GameInfo.All rights reserved.</p>
+               <p>Copyright © 2020 GameInfo rights reserved.</p>
             </div>
          </div>
       </footer>
