--- a/news.html
+++ b/news.html
@@ -97,7 +97,6 @@
                                        <ul class="nav navbar-nav">
                                           <li class="active"><a href="index.html">Home</a></li>
                                           <li><a href="about.html">About</a></li>
-                                          <li><a href="team.html">Team</a></li>
                                           <li><a href="news.html">News</a></li>
                                           <li class="dropdown mega-dropdown">
                                              <a href="match" class="dropdown-toggle" data-toggle="dropdown">Match<span class="caret"></span></a>				
@@ -149,8 +148,6 @@
                                                 </li>
                                              </ul>
                                           </li>
-                                          <li><a href="blog.html">Blog</a></li>
-                                          <li><a href="contact.html">contact</a></li>
                                        </ul>
                                     </div>
                                     <!-- /.nav-collapse -->
@@ -236,12 +233,12 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-xs-12">
                   <div class="content-widget top-story" style="background: url(images/top-story-bg.jpg);">
-                     <div class="top-stroy-header">
+                     <div class="top-story-header">
                         <h2>Top Soccer Headlines Story <a href="#" class="fa fa-fa fa-angle-right"></a></h2>
-                        <span class="date">July 05, 2017</span>
+                        <span class="date">July 05, 2020</span>
                         <h2>Other Headlines</h2>
                      </div>
-                     <ul class="other-stroies">
+                     <ul class="other-stories">
                         <li><a href="#">Wenger Vardy won't start</a></li>
                         <li><a href="#">Evans: Vardy just</a></li>
                         <li><a href="#">Pires and Murray </a></li>
@@ -252,11 +249,6 @@
                         <li><a href="#">Messi wins libel case.</a></li>
                      </ul>
                   </div>
-                  <aside id="sidebar" class="right-bar">
-                     <div class="banner">
-                        <img class="img-responsive" src="images/adds-3.jpg" alt="#">
-                     </div>
-                  </aside>
                </div>
             </div>
          </div>
@@ -316,7 +308,7 @@
          </div>
          <div class="footer-bottom">
             <div class="container">
-               <p>Copyright © 2018 GameInfo.All rights reserved.</p>
+               <p>Copyright © 2020 GameInfo.All rights reserved.</p>
             </div>
          </div>
       </footer>
